frontend/test/should_fail/independent_005.grg
test t {
	alternative {
		Something {			
			independent {		
				independent {
					patternpath;
				}
			}
		}
		Empty {
		}
	}
}
